Top bar alignment fixes

--- a/sass/layout/_site-header.scss
+++ b/sass/layout/_site-header.scss
@@ -17,8 +17,13 @@
   }
 
   .container {
-    padding: 0;
+    padding-top: 0;
+    padding-bottom: 0;
     overflow: visible;
+
+    @media(max-width: $responsivenav) {
+      padding: 0;
+    }
   }
 
   .site-branding {
